--- a/views/tournaments.pug
+++ b/views/tournaments.pug
@@ -14,6 +14,7 @@ block content
           p Year: #{tournament.year}
           p Location: #{tournament.location}
 
+          // Buttons to view, update, delete, or buy each tournament
           div.text-center
             button.btn.btn-info(onclick=`window.location.href='/tournaments/detail?id=${tournament._id}'`) Inspect
             button.btn.btn-warning(onclick=`window.location.href='/tournaments/update?id=${tournament._id}'`) Update
